# Reel48-Enterprise-Platform

./: .gitignore  CLAUDE.md  README.md  Reel48+ Harness Companion Guide.docx
backend/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  rate_limit.py  security.py  tenant.py
backend/app/middleware/: logging.py  tenant.py
backend/app/models/: __init__.py  approval_request.py  approval_rule.py  base.py  bulk_order.py  bulk_order_item.py  catalog.py  catalog_product.py  company.py  employee_profile.py  invite.py  invoice.py  notification.py  order.py  order_line_item.py  org_code.py  product.py  sub_brand.py  user.py  wishlist.py
backend/app/schemas/: analytics.py  approval.py  auth.py  bulk_order.py  catalog.py  common.py  company.py  employee_profile.py  invite.py  invoice.py  notification.py  order.py  user.py  (+5 more)
backend/migrations/: env.py
backend/scripts/: seed_acme_corp.py
backend/tests/: conftest.py  test_analytics.py  test_approval_endpoints.py  test_approval_notifications.py  test_approvals.py  test_auth.py  test_bulk_orders.py  test_catalogs.py  test_companies.py  test_employee_profiles.py  test_invites.py  test_invoices.py  test_isolation.py  test_notifications.py  test_orders.py  test_org_codes.py  test_platform_approvals.py  test_platform_bulk_orders.py  test_platform_catalog.py  test_platform_companies.py  test_platform_orders.py  test_products.py  test_registration.py  test_storage.py  test_sub_brands.py  test_users.py  test_wishlists.py
(+235 files in other folders)
